@@ -1,3 +1,9 @@
+2007-04-10  Alexander Larsson <alexl@redhat.com>
+
+	* utils.c (config_notify):
+	Also check registered directories for notification.
+	Fixes theme e.g. switching.
+
 2007-04-02  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-daemon.c (gnome_settings_daemon_new): return NULL
